--- a/css/style.css
+++ b/css/style.css
@@ -400,8 +400,8 @@ textarea {
 	vertical-align: middle;
 }
 
-.widget-header [class^="icon-refresh"]{
-	margin:4px;
+.icon-refresh {
+	padding: 5px 10px;
 }
 
 .widget-content {
