Removed external dependencies; replaced github banner;

--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,11 @@ Bootstrap Admin Template by EGrappler.com
 
 body {
 	background: #f9f6f1;
-	font: 13px/1.7em 'Open Sans';
+	font: 15px 'Times';
 }
     
 p { 
-	font: 13px/1.7em 'Open Sans'; 	
+	font: 15px 'Times'; 	
 }
 
 a {
