--- a/css/pages/dashboard.css
+++ b/css/pages/dashboard.css
@@ -355,3 +355,90 @@ h6.bigstats {
 .dataTables_paginate a:hover{ pointer:pointer;}
 .navbar-fixed-top{  margin-left:0px;}
 .widget-search{display: inline-block; vertical-align: middle; margin: 0 6px; width: 200px;}
+
+/* Added by kevinrabinovich */
+meter {
+    /* Reset appearance */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+	background: #ddd;
+	width: 100%;
+	height: 18px;
+	border: none;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+}
+meter::-webkit-meter-bar {
+	background: #ddd;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+}
+meter::-webkit-meter-optimum-value {
+	background: #444;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+}
+meter::-moz-meter-bar {
+	background: #ddd;
+	-moz-border-radius: 3px;
+    border-radius: 3px;
+}
+meter:-moz-meter-optimum::-moz-meter-bar {
+	background: #444;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+}
+
+/*<progress> fallback styling*/
+progress {
+	/*Reset appearance*/
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+	background: #ddd;
+	color: #444; /*For IE*/
+	width: 100%;
+	height: 18px;
+	border: 0;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+}
+progress[value] {
+	/*Reset appearance*/
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+progress::-webkit-progress-bar {
+    background: #ddd;
+	-webkit-border-radius: 3px;
+    border-radius: 3px;
+}
+progress::-webkit-progress-value {
+    background-color: #444;
+	-webkit-border-radius: 3px;
+    border-radius: 3px;
+}
+progress::-moz-progress-bar {
+    background-color: #444;
+	-moz-border-radius: 3px;
+    border-radius: 3px;
+}
+/*<div> > <span> fallback styling*/
+.progress-bar {
+  background-color: #ddd;
+  border-radius: 3px;
+  width: 100%;
+  height: 18px;
+  position: relative;
+  display: block;
+}
+  
+.progress-bar > span {
+  background-color: #444;
+  border-radius: 3px;
+  display: block;
+}
