Adding rotation effect to internet speed refresh icon

--- a/css/style.css
+++ b/css/style.css
@@ -65,10 +65,15 @@ textarea {
 	text-transform: uppercase;
 }
 
+.loading {
+	-webkit-animation:spin 2s linear infinite;
+	-moz-animation:spin 2s linear infinite;
+	animation:spin 2s linear infinite;
+}
 
-
-
-
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); } }
 
 
 /*------------------------------------------------------------------
@@ -1133,7 +1138,9 @@ width: 11px;}
 
 .paginate_active { text-decoration: underline; }
 
-
+#refresh-ispeed .icon-refresh {
+	margin: 0;
+}
 
 /*------------------------------------------------------------------
 [1. Max Width: 480px]
