Cleaned up style.css and added white-space: nowrap; to widget-header h3

--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,6 @@
 Bootstrap Admin Template by EGrappler.com
 ------------------------------------------------------------------*/
 
-
-
 /*------------------------------------------------------------------
 [1. Global]
 */
@@ -59,12 +57,10 @@ textarea {
 	background:linear-gradient(top, #FAFAFA 0%,#E9E9E9 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FAFAFA', endColorstr='#E9E9E9');
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#FAFAFA', endColorstr='#E9E9E9')";
-	
 	font-size: 10px;
 	color: #444;
 	text-transform: uppercase;
 }
-
 
 /*------------------------------------------------------------------
 [2. Navbar / .navbar]
@@ -76,9 +72,7 @@ textarea {
 
 .navbar-inner {
 	padding: 7px 0;
-	
 	background: #00ba8b !important;
-	
 	-moz-border-radius: 0;
 	-webkit-border-radius: 0;
 	border-radius: 0;
@@ -115,7 +109,6 @@ textarea {
 
 .navbar-search .search-query { background:#008866; border:0; color:#fff; line-height:normal;}
 
-
 /*------------------------------------------------------------------
 [3. Subnavbar / .subnavbar]
 */
@@ -132,7 +125,6 @@ textarea {
 
 .subnavbar .container > ul {
 	display: inline-block;
-	
 	height: 80px;
 	padding: 0;
 	margin: 0;
@@ -141,26 +133,19 @@ textarea {
 
 .subnavbar .container > ul > li {
 	float: left;
-	
 	min-width: 90px;
 	height: 60px;
 	padding: 0;
 	margin: 0;
-	
 	text-align: center;
 	list-style: none;
-	
 	border-left: 1px solid #d9d9d9;
-	
-	
 }
 
 .subnavbar .container > ul > li > a {
 	display: block;
-	
 	height: 100%;
 	padding: 0 15px;
-	
 	font-size: 12px;
 	font-weight: bold;
 	color: #b2afaa;
@@ -173,7 +158,6 @@ textarea {
 
 .subnavbar .container > ul > li > a > i {
 	display: inline-block;
-	
 	width: 24px;
 	height: 24px;
 	margin-top: 11px;
@@ -183,25 +167,19 @@ textarea {
 
 .subnavbar .container > ul > li > a > span {
 	display: block;
-	
 }
 
-
 .subnavbar .container > ul > li:hover > a {
-	
 	border-bottom:3px solid #ff7f74;
 	color: #383838;
 }
     
-
 .subnavbar .dropdown .dropdown-menu a {
 	font-size: 12px;
 }
-
     
 .subnavbar .dropdown .dropdown-menu {
-    text-align: left;
-    	
+	text-align: left;
 	-webkit-border-top-left-radius: 0;
 	-webkit-border-top-right-radius: 0;
 	-moz-border-radius-topleft: 0;
@@ -209,9 +187,7 @@ textarea {
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;
 }
-    
-    
-    
+
 .subnavbar .dropdown-menu::before {
 	content: '';
 	display: inline-block;
@@ -238,7 +214,6 @@ textarea {
 
 .subnavbar .caret {
 	margin-top: 4px;
-	
 	border-top-color: white;
 	border-bottom-color: white;
 }
@@ -247,39 +222,28 @@ textarea {
 	display: none;
 }
 
-
-
-
-
 /*------------------------------------------------------------------
 [4. Main / .main]
 */
 
 .main {
 	padding-bottom: 2em;
-	
 	border-bottom: 1px solid #000;
 }
-
-
 
 /*------------------------------------------------------------------
 [5. Extra / .extra]
 */
 
 .extra {
-
 	border-top: 1px solid #585858;
 	border-bottom: 1px solid #000;
-
 }
 
 .extra-inner {
 	padding: 20px 0;
-	
 	font-size: 11px;
 	color: #BBB;
-	
 	background: #1A1A1A;
 }
 
@@ -289,7 +253,6 @@ textarea {
 
 .extra h4 {
 	margin-bottom: 1em;
-	
 	font-weight: 400;
 }
 
@@ -300,12 +263,8 @@ textarea {
 
 .extra li {
 	margin-bottom: .6em;
-	
 	list-style: none;
 }
-
-
-
 
 /*------------------------------------------------------------------
 [6. Footer/ .footer]
@@ -313,13 +272,11 @@ textarea {
 
 .footer {
 	margin-top: 0;
-	
 	border-top: 1px solid #292929;
 }
 
 .footer-inner {
 	padding: 15px 0;
-	
 	font-size: 12px;
 	background: #111;
 	color: #999;
@@ -334,20 +291,16 @@ textarea {
 	text-decoration: none;
 }
 
-
 /*------------------------------------------------------------------
 [6. Widget / .widget]
 */
 
 .widget {
-	
 	position: relative;
 	clear: both;
-	
 	width: auto;
 	min-height: 240px;	
 	margin-bottom: 2em;
-		
 	overflow: hidden;
 }
 	
@@ -356,7 +309,6 @@ textarea {
         cursor: move;	
 	height: 40px;
 	line-height: 40px;
-	
 	background: #f9f6f1;
 	background:-moz-linear-gradient(top, #f9f6f1 0%, #f2efea 100%); /* FF3.6+ */
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#f9f6f1), color-stop(100%,#f2efea)); /* Chrome,Safari4+ */
@@ -366,11 +318,7 @@ textarea {
 	background:linear-gradient(top, #f9f6f1 0%,#f2efea 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f6f1', endColorstr='#f2efea');
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f6f1', endColorstr='#f2efea')";
-	
-	
 	border: 1px solid #d6d6d6;
-	
-	
 	-webkit-background-clip: padding-box;
 }	
 	
@@ -378,24 +326,20 @@ textarea {
 	position: relative;
 	top: 2px;
 	left: 10px;
-	
 	display: inline-block;
 	margin-right: 3em;
-		
+	white-space: nowrap;
 	font-size: 14px;
 	font-weight: 800;
 	color: #525252;
 	line-height: 18px;
-	
 	text-shadow: 1px 1px 2px rgba(255,255,255,.5);
 }
 	
 .widget-header [class^="icon-"], .widget-header [class*=" icon-"] {
-		
 	display: inline-block;
 	margin-left: 13px;
 	margin-right: -2px;
-			
 	font-size: 16px;
 	color: #555;
 	vertical-align: middle;
@@ -404,10 +348,7 @@ textarea {
 .widget-content {
 	padding: 20px 15px 15px;
 	background: #FFF;
-	
-	
 	border: 1px solid #D5D5D5;
-	
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
@@ -415,7 +356,6 @@ textarea {
 
 .widget-header+.widget-content {
 	border-top: none;
-	
 	-webkit-border-top-left-radius: 0;
 	-webkit-border-top-right-radius: 0;
 	-moz-border-radius-topleft: 0;
@@ -445,14 +385,12 @@ textarea {
 }
 
 /* Widget Table */
-
 .widget-table .widget-content {
 	padding: 0;
 }
 
 .widget-table .table {
 	margin-bottom: 0;
-	
 	border: none;
 }
 
@@ -464,27 +402,19 @@ textarea {
 	border-left: none;
 }
 
-
 /* Widget Plain */
-
 .widget-plain {
-	
 	background: transparent;
-	
 	border: none;
 }
 
 .widget-plain .widget-content {
 	padding: 0;
-	
 	background: transparent;
-	
 	border: none;
 }
 
-
 /* Widget Box */
-
 .widget-box {	
 	
 }
@@ -493,8 +423,6 @@ textarea {
 	background: #E3E3E3;	
 	background: #FFF;
 }
-
-
 
 /*------------------------------------------------------------------
 [7. Error / .error-container]
@@ -508,7 +436,6 @@ textarea {
 
 .error-container h1 {
 	margin-bottom: .5em;
-	
 	font-size: 120px;
 	line-height: 1em;
 }
@@ -520,7 +447,6 @@ textarea {
 
 .error-container .error-details {
 	margin-bottom: 1.5em;
-	
 	font-size: 16px;
 }
 
@@ -528,11 +454,7 @@ textarea {
 	margin: 0 .5em;
 }
 
-
-
 /* Message layout */
-
-
 ul.messages_layout {
 	position: relative;
 	margin: 0;
@@ -626,9 +548,7 @@ ul.messages_layout li .message_wrap .text {
 
 ul.messages_layout .dropdown-menu  li{ width:100%; font-size:11px;}
 
-
 /* Full Calendar */
-
 .fc {
 	direction: ltr;
 	text-align: left;
@@ -796,8 +716,8 @@ html .fc, .fc table {
 	position: relative;
 	float: left;
 	margin-top: -50%;
-*margin-top:0;
-*top:-50%
+	*margin-top:0;
+	*top:-50%
 }
 .fc-state-default .fc-button-effect {
 	position: absolute;
@@ -1036,7 +956,7 @@ table.fc-border-separate {
 	border-top-style: dotted
 }
 .fc-agenda-slots tr.fc-minor th.ui-widget-header {
-*border-top-style:solid
+	*border-top-style:solid
 }
 .fc-event-vert {
 	border-width: 0 1px
@@ -1090,7 +1010,6 @@ width: 11px;}
 /*------------------------------------------------------------------
 [8. Miscellaneous]
 */
-
 .chart-holder {
 	width: 100%;
 	height: 250px;
@@ -1136,40 +1055,30 @@ width: 11px;}
 */
 
 @media (max-width: 480px) {
-	
 	.error-container h1 {
 		font-size: 72px;
 	}
-	
 }
-
-
-
-
 
 /*------------------------------------------------------------------
 [1. Max Width: 767px]
 */
 
 @media (max-width: 767px) {
-    	
 	#main {
 		padding: 0 10px;
 		margin-right: -20px;
 		margin-left: -20px;	
 	}
 	
-	
 	.subnavbar {
 		margin-left: -20px;
 		margin-right: -20px;	
 	}
-
 	
 	.subnavbar .container > ul {
 		width: 100%;
 		height: auto;
-		
 		border: none;
 	}
 	
@@ -1177,24 +1086,19 @@ width: 11px;}
 		width: 33%;
 		height: 70px;
 		margin-bottom: 0;
-		
 		border: none;
 	}
 	
-    
-    
-    .subnavbar .container > ul > li.active > a {
+	.subnavbar .container > ul > li.active > a {
 		font-size: 11px;
-    	background: transparent;
-    }
+    		background: transparent;
+	}
 	
 	.subnavbar .container > ul > li > a > i {	
 		display: inline-block;	
 		margin-bottom: 0;
-		
 		font-size: 20px;
 	}
-	
 	
 	.subnavbar-open-right .dropdown-menu {
 		left: auto;
@@ -1236,22 +1140,15 @@ width: 11px;}
 		margin-left: 0;
 		margin-right: 1em;
 	}
-
 }
-    
-
-
-
 
 /*------------------------------------------------------------------
 [2. Max Width: 979px]
 */
 
 @media (max-width: 979px) {
-	
 	.navbar-fixed-top {
 		position: static;
-		
 		margin-bottom: 0;
 	}
 	
@@ -1278,11 +1175,6 @@ width: 11px;}
 		margin-left: 25px;
 	}
 }
-
-
-
-
-
 
 /*------------------------------------------------------------------
 [3. Max Width: 1199px]
