Playing with absolute minimal templates. Some more plugins added.

--- a/templates/plugins/table-data-plugin.html
+++ b/templates/plugins/table-data-plugin.html
@@ -2,16 +2,17 @@
 	[Table Data Plugin]
 	<h3>Title: {{heading}}</h3>
 
-	<table border="3">
+	<loader ng-hide="tableRows"></loader>
+
+	<table ng-show="tableRows" border="3">
 		<thead>
 			<tr>
-				<th ng-repeat="header in tableHeaders">{{header}}</th>
+				<th ng-repeat="header in tableHeaders track by $index">{{header}}</th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="row in tableRows">
-				<td>{{row[0]}}</td>
-				<td>{{row[1]}}</td>
+			<tr ng-repeat="row in tableRows | limitTo:10 track by $index ">
+				<td ng-repeat="item in row track by $index">{{item}}</td>
 			</tr>
 		</tbody>
 	</table>
