Added refresh button and last updated timestamp

--- a/templates/plugins/table-data-plugin.html
+++ b/templates/plugins/table-data-plugin.html
@@ -1,5 +1,8 @@
 <div class="plugin" heading="{{heading}}">
 	[Table Data Plugin]
+	[Last Updated: {{ lastGet | date:'hh:mm:ss a' }}]
+	<button ng-click="getData()">Refresh</button>
+
 	<h3>Title: {{heading}}</h3>
 
 	<loader ng-hide="tableRows"></loader>
