--- a/templates/plugins/static-data-plugin.html
+++ b/templates/plugins/static-data-plugin.html
@@ -1,5 +1,9 @@
 <div class="plugin" heading="{{heading}}">
 	[Static Data Plugin]
+	[Last Updated: {{ lastGet | date:'hh:mm:ss a' }}]
+	
+	<button ng-click="getData()">Refresh</button>
+
 	<h3>Title: {{heading}}</h3>
 
 	<div ng-repeat="staticItem in staticData">
