--- a/templates/plugins/line-chart-plugin.html
+++ b/templates/plugins/line-chart-plugin.html
@@ -2,11 +2,15 @@
 	[Line Chart Plugin]
 	[Last Updated: {{ lastGet | date:'hh:mm:ss a' }}]
 	
-	<button ng-click="getData()">Refresh</button>
-
 	<h3>Title: {{heading}}</h3>
 
 	<canvas width="423" height="144"></canvas>
+
+	<br>
+	[Metrics]
+	<div ng-repeat="metric in metrics">
+		{{metric.name}}: {{metric.data}}
+	</div>
 
 	{{currentData}}
 </div>
