Cleaned up most of old JS libs. Abstraction refactoring in new angular code. template structure more organized now. I like where this is going.

--- a/templates/plugins/line-chart-plugin.html
+++ b/templates/plugins/line-chart-plugin.html
@@ -1,6 +1,6 @@
 <div class="plugin">
 	[Line Chart Plugin]
-	[Last Updated: {{ lastGet | date:'hh:mm:ss a' }}]
+	<last-update timestamp="lastGet"></last-update>
 	
 	<h3>Title: {{heading}}</h3>
 
