--- a/templates/plugins/static-data-plugin.html
+++ b/templates/plugins/static-data-plugin.html
@@ -1,17 +1,11 @@
-<div class="plugin" heading="{{heading}}">
-	[Static Data Plugin]
-	<last-update timestamp="lastGet"></last-update>
-	
-	<refresh-btn refresh="getData()"></refresh-btn>
-
-	<h3>Title: {{heading}}</h3>
+<plugin 
+	heading="Disk Partitions"
+	last-updated="lastGet"
+	on-refresh="getData()">
 
 	<div ng-repeat="staticItem in staticData">
-		
 		<strong> {{staticItem.name}}: </strong> 
 		<span> {{ staticItem.data }} </span>
-		<br><br>
-
 	</div>
-
-</div>
+	
+</plugin>
