Added multi-line chart plugin. pretty cool but awkward code assumptions on metrics. added more widgets.

--- a/templates/plugins/line-chart-plugin.html
+++ b/templates/plugins/line-chart-plugin.html
@@ -6,9 +6,8 @@
 
 	<div class="plugin-body">
 
-		<canvas class="canvas" width="300" height="200"></canvas>
+		<canvas class="canvas" width="413"></canvas>
 
-		[Metrics]
 		<div ng-repeat="metric in metrics">
 			{{metric.name}}: {{metric.data}}
 		</div>
