--- a/templates/plugins/line-chart-plugin.html
+++ b/templates/plugins/line-chart-plugin.html
@@ -1,12 +1,10 @@
 <div class="plugin">
 
-	<last-update timestamp="lastGet"></last-update>
+	<top-bar heading="heading" last-updated="lastGet" no-refresh-btn></top-bar>
 	
-	<h3>{{heading}}</h3>
+	<div class="plugin-body no-padding">
 
-	<div class="plugin-body">
-
-		<canvas class="canvas" width="413"></canvas>
+		<canvas class="canvas" width="300" height="100"></canvas>
 
 		<div ng-repeat="metric in metrics">
 			{{metric.name}}: {{metric.data}}
