--- a/templates/plugins/table-data-plugin.html
+++ b/templates/plugins/table-data-plugin.html
@@ -5,7 +5,7 @@
 
 	<loader ng-hide="tableRows"></loader>
 
-	<table ng-show="tableRows" border="3">
+	<table ng-show="tableRows">
 		<thead>
 			<tr>
 				<th ng-repeat="header in tableHeaders track by $index">{{header}}</th>
