added units to some widgets. removed old index file.

--- a/templates/cpu-load.html
+++ b/templates/cpu-load.html
@@ -1,6 +1,6 @@
 <multi-line-chart-plugin
                 
-    heading="CPU Load"
+    heading="CPU Load (%)"
     module-name="loadavg"
 
     max-value="maxLoad"
