--- a/templates/memory.html
+++ b/templates/memory.html
@@ -1,7 +1,7 @@
 <line-chart-plugin
     ng-if="maxRam"
     
-    heading="RAM Memory"
+    heading="RAM (MB)"
     module-name="mem"
 
     max-value="maxRam"
